feat: add invitation registration page
